Resume HW assignment (updated)

--- a/Week 1/resume.html
+++ b/Week 1/resume.html
@@ -4,8 +4,9 @@
     <title>Rishi Resume</title>
 </head>
 <body>
+    <img src="https://media.licdn.com/dms/image/D5603AQEAzAhc3ZxD0A/profile-displayphoto-shrink_800_800/0/1694044338261?e=2147483647&v=beta&t=2t5J8yQKKUjb4YP0rqmLnadqvOpAZxhPgoskzWKS82Q" alt="Headshot">
     <h1>Rishi Gandikota</h1>
-    <span>rishi.gandik@gmail.com (972)-741-3256</span>
+    <span>rishi.gandik@gmail.com <a href="https://www.linkedin.com/in/rishigandikota/">linkedin.com/in/rishigandikota</a> (972)-741-3256</span>
     <hr>
     <div>
         <h2>Education</h2>
