--- a/Week 1/resume.html
+++ b/Week 1/resume.html
@@ -1,58 +1,85 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <title>Rishi Resume</title>
+    <link rel="stylesheet" type="text/css" href="resume.css">
+    <script src="resume.js"></script>
 </head>
 <body>
-    <img src="https://media.licdn.com/dms/image/D5603AQEAzAhc3ZxD0A/profile-displayphoto-shrink_800_800/0/1694044338261?e=2147483647&v=beta&t=2t5J8yQKKUjb4YP0rqmLnadqvOpAZxhPgoskzWKS82Q" alt="Headshot">
+    <!-- img id="headshot" src="https://media.licdn.com/dms/image/D5603AQEAzAhc3ZxD0A/profile-displayphoto-shrink_800_800/0/1694044338261?e=2147483647&v=beta&t=2t5J8yQKKUjb4YP0rqmLnadqvOpAZxhPgoskzWKS82Q" alt="Headshot" -->
     <h1>Rishi Gandikota</h1>
-    <span>rishi.gandik@gmail.com <a href="https://www.linkedin.com/in/rishigandikota/">linkedin.com/in/rishigandikota</a> (972)-741-3256</span>
+    <div style="display: flex; justify-content: center">
+        <span>rishi.gandik@gmail.com • 
+            <a href="https://www.linkedin.com/in/rishigandikota/" id="linkedin">linkedin.com/in/rishigandikota </a>
+        • (972)-741-3256 • ATX</span>
+    </div>
     <hr>
+    <div>
+        <h2>Professional Summary</h2>
+        <hr>
+        <span style="font-size: 85%;">
+            I am a Physics Honors student at the University of Texas at Austin with an interest in applied physics research and software engineering. Prior to graduating as Salutatorian of Allen High School, the largest public high school in Texas, I gained experience in higher-level mathematics, engineering, and coding. As a fast learner with a strong work ethic, I can quickly adapt to new technologies and am willing to work in nascent and evolving fields.
+        </span>
+    </div>
     <div>
         <h2>Education</h2>
         <hr>
-        <span>University of Texas at Austin, May 2026</span>
-        <br>
+        <div class="heading">
+        <span class="title">University of Texas at Austin</span>
+        <span class="date">May 2027</span>
+        </div>
         <span>Bachelor of Science Honors in Physics</span>
         <br>
-        <span>Dean's Scholars</span>
+        <span class="role">Dean's Scholars</span>
         <br>
         <br>
-        <span>Coursework: M 427L Honors, CH 301C Honors, UGS 303 Honors, C C 301</span>
+        <span style="font-size: 95%;">Coursework: M 427L Honors, CH 301C Honors, UGS 303 Honors, C C 301</span>
+        <br>
+        <br>
+        <div class="heading">
+            <span class="title">Allen High School</span>
+            <span class="date">May 2023</span>
+        </div>
+        <span>Salutatorian, Rank 2 of 1627</span>
+        <br>
+        <span class="role">Largest high school in Texas</span>
     </div>
     <div>
         <h2>Skills</h2>
         <hr>
-        <span>Coding Experience</span>
+        <span class="bold">Coding Experience</span>
         <br>
-        <span>Familar with Python, Java, HTML & CSS, and SQL</span>
+        <span>Familar with Python, Java, HTML & CSS, JavaScript, and SQL</span>
         <br>
         <br>
-        <span>CAD Experience</span>
+        <span class="bold">CAD Experience</span>
         <br>
         <span>Familiar with Solidworks and SolidEdge</span>
         <br>
         <br>
-        <span>Language Proficiency</span>
+        <span class="bold">Language Proficiency</span>
         <br>
         <span>Spanish, professional working proficiency</span>
     </div>
     <div>
         <h2>Experience</h2>
         <hr>
-        <span>School of Physics, University of Hyderabad</span>
-        <br>
-        <span>Student Researcher</span>
-        <ul>
+        <div class="heading">
+        <span class="title">School of Physics, University of Hyderabad</span>
+        <span class="date">June 2023 - July 2023</span>
+        </div>
+        <span class="role">Student Researcher</span>
+        <ul style="padding-top: 0px; margin-top: 0px">
             <li>Conducted testing of Bi compounds for high-Tc superconductivity</li>
             <li>Designed material molds in SolidWorks and printed using 3D-printing</li>
             <li>Analyzed physical structure of compound using electron microscopy</li>
         </ul>
         <br>
-        <span>Department of Computer Science, University of Texas at Dallas</span>
-        <br>
-        <span>Data Analytics Intern</span>
-        <ul>
+        <div class="heading">
+        <span class="title">Department of Computer Science, University of Texas at Dallas</span>
+        <span class="date">July 2023</span>
+        </div>
+        <span class="role">Data Analytics Intern</span>
+        <ul style="padding-top: 0px; margin-top: 0px">
             <li>Learned about applications of data analytics for business intelligence</li>
             <li>Developed analytical models using Python and SQL</li>
         </ul>
@@ -60,10 +87,12 @@
     <div>
         <h2>Campus Involvement</h2>
         <hr>
-        <span>UT Society of Physics Students (SPS)</span>
-        <br>
-        <span>General Member</span>
-        <ul>
+        <div class="heading">
+        <span class="title">UT Society of Physics Students (SPS)</span>
+        <span class="date">August 2023 - Present</span>
+        </div>
+        <span class="role">General Member</span>
+        <ul style="padding-top: 0px; margin-top: 0px">
             <li>Attending weekly lectures by physics faculty on cutting-edge topics</li>
         </ul>
     </div>
