--- a/Week 1/resume.html
+++ b/Week 1/resume.html
@@ -25,14 +25,14 @@
         <hr>
         <div class="heading">
         <span class="title">University of Texas at Austin</span>
-        <span class="date">May 2027</span>
+        <span class="date">May 2026</span>
         </div>
         <span>Bachelor of Science Honors in Physics</span>
         <br>
         <span class="role">Dean's Scholars</span>
         <br>
         <br>
-        <span style="font-size: 95%;">Coursework: M 427L Honors, CH 301C Honors, UGS 303 Honors, C C 301</span>
+        <span style="font-size: 95%;">Coursework: M 427L Honors, CH 301 Honors, UGS 303 Honors, C C 301</span>
         <br>
         <br>
         <div class="heading">
@@ -48,7 +48,7 @@
         <hr>
         <span class="bold">Coding Experience</span>
         <br>
-        <span>Familar with Python, Java, HTML & CSS, JavaScript, and SQL</span>
+        <span>Familar with Python, Java, HTML & CSS, and JavaScript</span>
         <br>
         <br>
         <span class="bold">CAD Experience</span>
