--- a/Week 3/Weather_API_Demo/weatherAPIDemo.html
+++ b/Week 3/Weather_API_Demo/weatherAPIDemo.html
@@ -47,7 +47,7 @@
 		}
 
 		function getTemp() {
-			let apiCall = `api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&appid=${apiKey}&units=imperial`;
+			let apiCall = `https://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&appid=${apiKey}&units=imperial`;
 
 			fetch(apiCall)
 				.then((response) =>
