API key removed

--- a/Week 3/HW/index.html
+++ b/Week 3/HW/index.html
@@ -32,7 +32,7 @@
 
 <script>
 		// USE YOUR OWN API KEY
-		const apiKey = "7f6b86cd598717316f96abd5f0eca1d0";
+		const apiKey = "";
 
         // variable that stores the city that is chosen
 		let city;
