--- a/Week 3/HW/index.html
+++ b/Week 3/HW/index.html
@@ -2,25 +2,25 @@
 <html>
 
 <head>
-	<title>Weather Complete</title>
+	<title>Weather Forecast App</title>
 	<meta charset="UTF-8" />
+  <!-- Most of the rendered elements use viewport responsive values so they maintain their
+  relative positions even when the webpage is resized (such as when inspecting in Chrome) -->	
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 	<div id='main-container'>
 		<div id='weather-container'>
-			<div id='weather-header'>
-				<h3 id='date'></h3>
-				<h1 id='location'></h1>
-				<div class='cover'>
-					<div>
-						<h2 id='cover-label'></h2>
-						<h1 id='current-temp'></h1>
-						<span id='aqi'></span>
-					</div>
-					<img id='cover-visual'>
+			<h3 id='date'></h3>
+			<h1 id='location'></h1>
+			<div class='cover'>
+				<div>
+					<h2 id='cover-label'></h2>
+					<h1 id='current-temp'></h1>
+					<h3 id='aqi'></h3>
 				</div>
+				<img id='cover-visual'>
 			</div>
 			<div id='forecast-container'></div>
 		</div>
@@ -35,7 +35,7 @@
 </body>
 
 <script>
-		// USE YOUR OWN API KEY
+		// Assign valid OpenWeather API Key to apiKey to run app
 		const apiKey = "";
 
         // variable that stores the city that is chosen
@@ -51,6 +51,10 @@
 			var date = new Date();
 			date.setDate(date.getDate() + daysFromNow);
 			output += date.toLocaleString('en-US', { weekday: 'long' }).toUpperCase()
+			// Adds the month after the day of the week to the current date
+			if (!daysFromNow) {
+				output += ', ' + date.toLocaleString('en-US', { month: 'long'}).toUpperCase()
+			}
 			output += ' ' + date.getDate()
 			return output
 		}
@@ -115,82 +119,85 @@
 			//printing the city object to the console
 			console.log(city);
             // BEGIN CODING HERE
+			// Calls the functions that fetch (GET) weather and AQI data from their respective APIs
 			pullWeather()
 			pullAQI()
 		}
 
-		// function to pull weather data from OpenWeather API
+		// Function that pulls current and forecasted weather data from OpenWeather
 		function pullWeather() {
-				let apiWeather = `https://api.openweathermap.org/data/2.5/forecast?lat=${city.lat}&lon=${city.lon}&appid=${apiKey}&units=imperial`;
+			/* Uses OpenWeather's "5 day weather forecast" API instead of One Call API, which results
+			in only 4 forecasted (non-current) days instead of 5 as shown in the Figma example */
+			let apiWeather = `https://api.openweathermap.org/data/2.5/forecast?lat=${city.lat}&lon=${city.lon}&appid=${apiKey}&units=imperial`;
 
-				fetch(apiWeather)
-					.then((response) =>
-						response.json()
-					)
-					.then((data) => {
-						weather = data
-						//console.log("Weather successfully pulled")
-						displayWeather()
-						displayForecast()
-					})
+			fetch(apiWeather)
+				.then((response) =>
+					response.json()
+				)
+				.then((data) => {
+					weather = data
+					console.log("Weather successfully pulled")
+					// Calls the functions that render the current and forecasted weather data, respectively
+					displayWeather()
+					displayForecast()
+				})
 		}
 
-		// function to display current weather data
+		// Function that renders current weather data
 		function displayWeather() {
 			document.querySelector('#date').innerText = formatDate()
 			document.querySelector('#location').innerText = "Weather for " + city.name + ", " + city.state
 			document.querySelector('#cover-label').innerText = weather.list[0].weather[0].main
-			//console.log(weather.list[0].weather[0].main)
 			document.querySelector('#cover-visual').src = `icons/${weather.list[0].weather[0].icon}.svg`
+			// Provides alt text matching the missing image if the appropriate svg file is not stored in the icons folder
 			document.querySelector('#cover-visual').alt = weather.list[0].weather[0].description + " icon"
-			//console.log(weather.list[0].weather[0].icon)
 			document.querySelector('#current-temp').innerText = Math.round(weather.list[0].main.temp) + "°"
-			//console.log(weather.list[0].main.temp)
 		}
 
-		// function to display weather forecast data
+		// Function that renders forecasted weather data
 		function displayForecast() {
+			// Clears contents of forecast-container to prevent prior weather forecasts still displaying on successive searches
 			let forecastContainer = document.getElementById('forecast-container')
 			forecastContainer.innerHTML = null
-
-			for (let i = 0; i < weather.list.length; i+=8) {
+			// Generates 4 forecasts, each at 24 hour (3 hour*8) intervals starting 24 hours from the current weather data
+			for (let i = 8; i < weather.list.length; i+=8) {
+				// Assigns each forecast the forecast-box class so they can share formatting (CSS)
 				let forecastBox = document.createElement('div')
 				forecastBox.setAttribute('class', 'forecast-box')
-
+				// Creates contents of each forecast by pulling data from the weather variable based on # of iteration through for loop
+				/* Only provides average forecasted temp for the day (not min to max as shown in Figma example)
+				because min to max temp is not available for all times using the "5 day weather forecast" API;
+				the code below can be substituted for line 174 to display min to max temps, but it will  return
+				average daily temp for both values if no min and/or max exists
+				<span>${Math.round(weather.list[i].main.temp_min)}° to ${Math.round(weather.list[i].main.temp_max)}°</span> */
 				forecastBox.innerHTML = `
-					<span>${formatDate(i/8+1)}</span>
+					<span>${formatDate(i/8)}</span>
 					<img src="icons/${weather.list[i].weather[0].icon}.svg" alt="${weather.list[i].weather[0].description} icon">
-					<span>${Math.round(weather.list[i].main.temp)}°</span>
-					`
-				//Only provided forecast temp for the day (not min to max) because min to max is not available for all days/locations
-				//Code below can be substituted for forecast temp code to include min to max temps
-				//<span>${Math.round(weather.list[i].main.temp_min)}° to ${Math.round(weather.list[i].main.temp_max)}°</span>
-
-				//console.log(weather.list[i].main.temp)
-
+					<span>${Math.round(weather.list[i].main.temp)}°</span>`
+				// Adds each forecast-box element to the forecast-container parent before generating the next one so order is preserved
 				document.querySelector('#forecast-container').appendChild(forecastBox)
 			}
 		}
 
-		// function to pull air quality data from OpenWeather API
+		// Function that pulls current air quality index (AQI) data from OpenWeather
 		function pullAQI() {
-				let apiAQI = `http://api.openweathermap.org/data/2.5/air_pollution?lat=${city.lat}&lon=${city.lon}&appid=${apiKey}`;
+			let apiAQI = `http://api.openweathermap.org/data/2.5/air_pollution?lat=${city.lat}&lon=${city.lon}&appid=${apiKey}`;
 
-				fetch(apiAQI)
-					.then((response) =>
-						response.json()
-					)
-					.then((data) => {
-						aqi = data
-						//console.log("AQI successfully pulled")
-						displayAQI()
-					})
+			fetch(apiAQI)
+				.then((response) =>
+					response.json()
+				)
+				.then((data) => {
+					aqi = data
+					console.log("AQI successfully pulled")
+					// Calls function that renders current AQI data
+					displayAQI()
+				})
 		}
 
-		// function to display AQI data
+		// Function that renders current AQI data
 		function displayAQI() {
 			document.querySelector('#aqi').innerText = "AQI: " + aqi.list[0].main.aqi
-			//console.log(aqi.list[0].main.aqi)
 		}
 	</script>
 </html>
